# myHunter_sfml

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
Hunter/: CMakeLists.txt  Hunter  Makefile
Hunter/include/: Cloud.hpp  Sound.hpp  all.hpp  anim_struc.hpp  my.hpp  struc.hpp  struc_param.hpp
Hunter/src/: anim.cpp  anim_back.cpp  body.cpp  boo.cpp  coin.cpp  destroy_sound.cpp  double.cpp  duck.cpp  life.cpp  main.cpp  mun.cpp  mushroom.cpp  pipe_plaine_cloud.cpp  randy.cpp  score.cpp  slowmo.cpp  timer.cpp  value.cpp  verif.cpp
Hunter/src/class/: Cloud.cpp  Sound.cpp
Hunter/src/init/: init_1stra.cpp  init_1strg.cpp  init_2strg.cpp  init_duck.cpp  init_life.cpp  init_mush.cpp
Hunter/src/level1/: endlevel.cpp  endtime.cpp  evt_level1.cpp  level1.cpp  open.cpp
Hunter/src/menu/: click_menu.cpp  key_menu.cpp  menu.cpp
Hunter/src/pause/: click.cpp  evt.cpp  pause.cpp
cmake/: deps.cmake
include/: all.h  anim_struc.h  my.h  struc.h  struc_param.h
src/: anim.c  anim_back.c  body.c  boo.c  coin.c  destroy_sound.c  double.c  duck.c  life.c  main.c  mun.c  mushroom.c  my_hunter  pipe_plaine_cloud.c  randy.c  score.c  slowmo.c  timer.c  value.c  verif.c
src/init/: init_1stra.c  init_1strg.c  init_2strg.c  init_duck.c  init_life.c  init_mush.c
src/level1/: endlevel.c  endtime.c  evt_level1.c  level1.c  open.c
src/menu/: click_menu.c  key_menu.c  menu.c
src/pause/: click.c  evt.c  pause.c
